Harden database access and staging validation