@@ -1,436 +1,280 @@
 package com.example.demo.controller;
 
+import com.example.demo.exception.ApiException;
+import com.example.demo.model.MenuItem;
 import com.example.demo.model.Order;
-import com.example.demo.model.User;
 import com.example.demo.model.OrderItem;
-import com.example.demo.repository.OrderRepository;
+import com.example.demo.model.Restaurant;
+import com.example.demo.model.User;
 import com.example.demo.repository.CustomerRepository;
-import com.example.demo.repository.OrderItemRepository;
+import com.example.demo.repository.MenuItemRepository;
+import com.example.demo.repository.OrderRepository;
 import com.example.demo.repository.RestaurantRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 @RestController
 @RequestMapping("/api/orders")
 public class OrderController {
+    private static final Set<String> ALLOWED_STATUSES = Set.of(
+        "New", "Accepted", "Preparing", "Out for Delivery", "Delivered", "Cancelled", "Refunded"
+    );
+
     @Autowired
     private OrderRepository orderRepository;
     @Autowired
     private CustomerRepository customerRepository;
     @Autowired
-    private OrderItemRepository orderItemRepository;
+    private MenuItemRepository menuItemRepository;
     @Autowired
     private RestaurantRepository restaurantRepository;
 
     @GetMapping
     public List<Map<String, Object>> getAllOrders(@AuthenticationPrincipal UserDetails userDetails) {
-        // Only admin users should be able to see all orders
-        User user = customerRepository.findByUsername(userDetails.getUsername()).orElseThrow();
+        User user = authenticatedUser(userDetails);
         if (!"ADMIN".equals(user.getRole())) {
-            throw new RuntimeException("Access denied. Only admin users can view all orders.");
+            throw new AccessDeniedException("Access denied");
         }
-        return orderRepository.findAll().stream().map(order -> {
-            Map<String, Object> dto = new java.util.HashMap<>();
-            dto.put("id", order.getId());
-            dto.put("userId", order.getUserId());
-            dto.put("restaurantId", order.getRestaurantId());
-            dto.put("status", order.getStatus());
-            dto.put("total", order.getTotal());
-            dto.put("createdAt", order.getCreatedAt());
-            dto.put("created_at", order.getCreatedAt()); // Also include snake_case for compatibility
-            
-            // Add customer information
-            if (order.getUserId() != null) {
-                var userOpt = customerRepository.findById(order.getUserId());
-                if (userOpt.isPresent()) {
-                    User customer = userOpt.get();
-                    dto.put("customerName", customer.getUsername());
-                    dto.put("customerEmail", customer.getEmail());
-                }
-            }
-            
-            // Add restaurant information
-            if (order.getRestaurantId() != null) {
-                var restaurantOpt = restaurantRepository.findById(order.getRestaurantId());
-                if (restaurantOpt.isPresent()) {
-                    var restaurant = restaurantOpt.get();
-                    dto.put("restaurantName", restaurant.getName());
-                    dto.put("restaurantAddress", restaurant.getAddress());
-                }
-            }
-            
-            // Convert order items to DTOs
-            if (order.getItems() != null) {
-                List<Map<String, Object>> items = order.getItems().stream().map(item -> {
-                    Map<String, Object> itemDto = new java.util.HashMap<>();
-                    itemDto.put("id", item.getId());
-                    itemDto.put("menuItemId", item.getMenuItemId());
-                    itemDto.put("name", item.getName());
-                    itemDto.put("price", item.getPrice());
-                    itemDto.put("quantity", item.getQuantity());
-                    return itemDto;
-                }).collect(java.util.stream.Collectors.toList());
-                dto.put("items", items);
-            } else {
-                dto.put("items", new java.util.ArrayList<>());
-            }
-            return dto;
-        }).collect(java.util.stream.Collectors.toList());
+        return orderRepository.findAll().stream().map(this::toOrderDto).toList();
     }
 
     @GetMapping("/{id}")
-    public Map<String, Object> getOrderById(@PathVariable Long id) {
+    public Map<String, Object> getOrderById(@PathVariable Long id, @AuthenticationPrincipal UserDetails userDetails) {
+        User user = authenticatedUser(userDetails);
         Order order = orderRepository.findById(id).orElseThrow();
-        Map<String, Object> result = new java.util.HashMap<>();
-        result.put("id", order.getId());
-        result.put("userId", order.getUserId());
-        result.put("restaurantId", order.getRestaurantId());
-        result.put("status", order.getStatus());
-        result.put("total", order.getTotal());
-        // Convert order items to DTOs
-        if (order.getItems() != null) {
-            List<Map<String, Object>> items = order.getItems().stream().map(item -> {
-                Map<String, Object> itemDto = new java.util.HashMap<>();
-                itemDto.put("id", item.getId());
-                itemDto.put("menuItemId", item.getMenuItemId());
-                itemDto.put("name", item.getName());
-                itemDto.put("price", item.getPrice());
-                itemDto.put("quantity", item.getQuantity());
-                return itemDto;
-            }).collect(java.util.stream.Collectors.toList());
-            result.put("items", items);
-        } else {
-            result.put("items", new java.util.ArrayList<>());
-        }
-        result.put("date", order.getCreatedAt() != null ? order.getCreatedAt() : order.getId());
-        result.put("createdAt", order.getCreatedAt());
-        result.put("created_at", order.getCreatedAt()); // Also include snake_case for compatibility
-        
-        // Add customer information
-        if (order.getUserId() != null) {
-            var userOpt = customerRepository.findById(order.getUserId());
-            if (userOpt.isPresent()) {
-                User customer = userOpt.get();
-                result.put("customerName", customer.getUsername());
-                result.put("customerEmail", customer.getEmail());
-            }
-        }
-        // Add restaurant name
-        String restaurantName = "";
-        if (order.getRestaurantId() != null) {
-            var restOpt = restaurantRepository.findById(order.getRestaurantId());
-            if (restOpt.isPresent()) restaurantName = restOpt.get().getName();
-        }
-        result.put("restaurantName", restaurantName);
-        return result;
+        requireOrderAccess(user, order);
+        return toOrderDto(order);
     }
 
     @PostMapping
+    @Transactional
     public Map<String, Object> placeOrder(@RequestBody Map<String, Object> req, @AuthenticationPrincipal UserDetails userDetails) {
-        if (userDetails == null) {
-            throw new RuntimeException("User not authenticated");
+        User customer = authenticatedUser(userDetails);
+        if (!"CUSTOMER".equals(customer.getRole())) {
+            throw new AccessDeniedException("Only customers can place orders");
         }
-        User customer = customerRepository.findByUsername(userDetails.getUsername()).orElseThrow();
+
         @SuppressWarnings("unchecked")
         List<Map<String, Object>> items = (List<Map<String, Object>>) req.get("items");
-        Long restaurantId = items != null && !items.isEmpty() ? Long.valueOf(items.get(0).get("restaurantId").toString()) : null;
-        if (restaurantId == null) throw new IllegalArgumentException("restaurantId is required");
+        if (items == null || items.isEmpty()) {
+            throw new IllegalArgumentException("At least one order item is required");
+        }
+
         Order order = new Order();
         order.setUserId(customer.getId());
-        order.setRestaurantId(restaurantId);
         order.setStatus("New");
+
         double total = 0.0;
+        Long restaurantId = null;
         List<OrderItem> orderItems = new java.util.ArrayList<>();
-        if (items != null) {
-            for (Map<String, Object> item : items) {
-                OrderItem orderItem = new OrderItem();
-                orderItem.setOrder(order);
-                Object menuItemIdObj = item.get("menu_item_id");
-                if (menuItemIdObj == null) {
-                    throw new IllegalArgumentException("menu_item_id is required in order item");
-                }
-                orderItem.setMenuItemId(Long.valueOf(menuItemIdObj.toString()));
-                orderItem.setName((String) item.get("name"));
-                orderItem.setPrice(Double.valueOf(item.get("price").toString()));
-                orderItem.setQuantity(Integer.valueOf(item.get("qty").toString()));
-                orderItems.add(orderItem);
-                total += orderItem.getPrice() * orderItem.getQuantity();
+
+        for (Map<String, Object> item : items) {
+            Long menuItemId = requiredLong(item.get("menu_item_id"), "menu_item_id is required in order item");
+            Integer quantity = requiredInteger(item.get("qty"), "qty is required in order item");
+            if (quantity <= 0) {
+                throw new IllegalArgumentException("Order item quantity must be greater than zero");
             }
+
+            MenuItem menuItem = menuItemRepository.findById(menuItemId)
+                .orElseThrow(() -> new IllegalArgumentException("Menu item not found"));
+            if (!Boolean.TRUE.equals(menuItem.getIsAvailable())) {
+                throw new IllegalArgumentException("Menu item '" + menuItem.getName() + "' is not available");
+            }
+            if (menuItem.getRestaurant() == null) {
+                throw new IllegalArgumentException("Menu item is not assigned to a restaurant");
+            }
+
+            Long itemRestaurantId = menuItem.getRestaurant().getId();
+            if (restaurantId == null) {
+                restaurantId = itemRestaurantId;
+                order.setRestaurantId(restaurantId);
+            } else if (!restaurantId.equals(itemRestaurantId)) {
+                throw new IllegalArgumentException("All order items must belong to the same restaurant");
+            }
+
+            if (Boolean.TRUE.equals(menuItem.getShowQuantity()) && menuItem.getQuantityAvailable() != null) {
+                if (quantity > menuItem.getQuantityAvailable()) {
+                    throw new IllegalArgumentException("Insufficient quantity for '" + menuItem.getName() + "'. Available: " + menuItem.getQuantityAvailable());
+                }
+                menuItem.setQuantityAvailable(menuItem.getQuantityAvailable() - quantity);
+            }
+
+            OrderItem orderItem = new OrderItem();
+            orderItem.setOrder(order);
+            orderItem.setMenuItemId(menuItem.getId());
+            orderItem.setName(menuItem.getName());
+            orderItem.setPrice(menuItem.getPrice());
+            orderItem.setQuantity(quantity);
+            orderItems.add(orderItem);
+            total += menuItem.getPrice() * quantity;
         }
+
         order.setTotal(total);
         order.setItems(orderItems);
-        Order savedOrder = orderRepository.save(order);
-        // Save order items (cascade should handle, but ensure saved)
-        for (OrderItem oi : orderItems) {
-            oi.setOrder(savedOrder);
-            orderItemRepository.save(oi);
-        }
-        
-        // Return DTO instead of entity
-        Map<String, Object> result = new java.util.HashMap<>();
-        result.put("id", savedOrder.getId());
-        result.put("userId", savedOrder.getUserId());
-        result.put("restaurantId", savedOrder.getRestaurantId());
-        result.put("status", savedOrder.getStatus());
-        result.put("total", savedOrder.getTotal());
-        // Convert order items to DTOs
-        if (savedOrder.getItems() != null) {
-            List<Map<String, Object>> itemsDto = savedOrder.getItems().stream().map(item -> {
-                Map<String, Object> itemDto = new java.util.HashMap<>();
-                itemDto.put("id", item.getId());
-                itemDto.put("menuItemId", item.getMenuItemId());
-                itemDto.put("name", item.getName());
-                itemDto.put("price", item.getPrice());
-                itemDto.put("quantity", item.getQuantity());
-                return itemDto;
-            }).collect(java.util.stream.Collectors.toList());
-            result.put("items", itemsDto);
-        } else {
-            result.put("items", new java.util.ArrayList<>());
-        }
-        return result;
+        return toOrderDto(orderRepository.save(order));
     }
 
     @GetMapping("/my")
     public List<Map<String, Object>> getMyOrders(@AuthenticationPrincipal UserDetails userDetails) {
-        User customer = customerRepository.findByUsername(userDetails.getUsername()).orElseThrow();
-        List<Order> orders = orderRepository.findAll().stream()
-            .filter(o -> o.getUserId().equals(customer.getId()))
-            .sorted((a, b) -> b.getId().compareTo(a.getId())) // Sort by ID descending (latest first)
-            .toList();
-        List<Map<String, Object>> result = new java.util.ArrayList<>();
-        for (Order o : orders) {
-            Map<String, Object> map = new java.util.HashMap<>();
-            map.put("id", o.getId());
-            map.put("userId", o.getUserId());
-            map.put("restaurantId", o.getRestaurantId());
-            map.put("status", o.getStatus());
-            map.put("total", o.getTotal());
-            // Convert order items to DTOs
-            if (o.getItems() != null) {
-                List<Map<String, Object>> items = o.getItems().stream().map(item -> {
-                    Map<String, Object> itemDto = new java.util.HashMap<>();
-                    itemDto.put("id", item.getId());
-                    itemDto.put("menuItemId", item.getMenuItemId());
-                    itemDto.put("name", item.getName());
-                    itemDto.put("price", item.getPrice());
-                    itemDto.put("quantity", item.getQuantity());
-                    return itemDto;
-                }).collect(java.util.stream.Collectors.toList());
-                map.put("items", items);
-            } else {
-                map.put("items", new java.util.ArrayList<>());
-            }
-            map.put("date", o.getCreatedAt() != null ? o.getCreatedAt() : o.getId());
-            map.put("createdAt", o.getCreatedAt());
-            map.put("created_at", o.getCreatedAt()); // Also include snake_case for compatibility
-            
-            // Add customer information (we already have customer from line 201, but include it in map for consistency)
-            map.put("customerName", customer.getUsername());
-            map.put("customerEmail", customer.getEmail());
-            // Add restaurant name
-            String restaurantName = "";
-            if (o.getRestaurantId() != null) {
-                var restOpt = restaurantRepository.findById(o.getRestaurantId());
-                if (restOpt.isPresent()) restaurantName = restOpt.get().getName();
-            }
-            map.put("restaurant", restaurantName);
-            result.add(map);
+        User customer = authenticatedUser(userDetails);
+        if (!"CUSTOMER".equals(customer.getRole())) {
+            throw new AccessDeniedException("Only customers can view this order list");
         }
-        return result;
+        return orderRepository.findByUserIdOrderByCreatedAtDesc(customer.getId()).stream()
+            .map(order -> toOrderDto(order, customer))
+            .toList();
     }
 
     @GetMapping("/restaurant/{restaurantId}")
-    public List<Map<String, Object>> getOrdersForRestaurant(@PathVariable Long restaurantId) {
-        return orderRepository.findAll().stream()
-            .filter(o -> o.getRestaurantId().equals(restaurantId))
-            .sorted((a, b) -> b.getId().compareTo(a.getId())) // Sort by ID descending (latest first)
-            .map(order -> {
-                Map<String, Object> dto = new java.util.HashMap<>();
-                dto.put("id", order.getId());
-                dto.put("userId", order.getUserId());
-                dto.put("restaurantId", order.getRestaurantId());
-                dto.put("status", order.getStatus());
-                dto.put("total", order.getTotal());
-                dto.put("createdAt", order.getCreatedAt());
-                dto.put("created_at", order.getCreatedAt()); // Also include snake_case for compatibility
-                
-                // Add restaurant information
-                if (order.getRestaurantId() != null) {
-                    var restaurantOpt = restaurantRepository.findById(order.getRestaurantId());
-                    if (restaurantOpt.isPresent()) {
-                        var restaurant = restaurantOpt.get();
-                        dto.put("restaurantName", restaurant.getName());
-                        dto.put("restaurantAddress", restaurant.getAddress());
-                    }
-                }
-                
-                // Convert order items to DTOs
-                if (order.getItems() != null) {
-                    List<Map<String, Object>> items = order.getItems().stream().map(item -> {
-                        Map<String, Object> itemDto = new java.util.HashMap<>();
-                        itemDto.put("id", item.getId());
-                        itemDto.put("menuItemId", item.getMenuItemId());
-                        itemDto.put("name", item.getName());
-                        itemDto.put("price", item.getPrice());
-                        itemDto.put("quantity", item.getQuantity());
-                        return itemDto;
-                    }).collect(java.util.stream.Collectors.toList());
-                    dto.put("items", items);
-                } else {
-                    dto.put("items", new java.util.ArrayList<>());
-                }
-                return dto;
-            })
-            .collect(java.util.stream.Collectors.toList());
+    public List<Map<String, Object>> getOrdersForRestaurant(@PathVariable Long restaurantId,
+                                                            @AuthenticationPrincipal UserDetails userDetails) {
+        User user = authenticatedUser(userDetails);
+        requireRestaurantOwner(user, restaurantId);
+        return orderRepository.findByRestaurantIdOrderByCreatedAtDesc(restaurantId).stream()
+            .map(this::toOrderDto)
+            .toList();
     }
 
     @PutMapping("/{id}")
-    public Map<String, Object> updateOrder(@PathVariable Long id, @RequestBody Order orderDetails) {
+    public Map<String, Object> updateOrder(@PathVariable Long id, @RequestBody Order orderDetails,
+                                           @AuthenticationPrincipal UserDetails userDetails) {
+        User user = authenticatedUser(userDetails);
         Order order = orderRepository.findById(id).orElseThrow();
-        order.setUserId(orderDetails.getUserId());
-        order.setRestaurantId(orderDetails.getRestaurantId());
-        order.setStatus(orderDetails.getStatus());
-        order.setTotal(orderDetails.getTotal());
-        Order saved = orderRepository.save(order);
-        
-        // Return DTO instead of entity
-        Map<String, Object> dto = new java.util.HashMap<>();
-        dto.put("id", saved.getId());
-        dto.put("userId", saved.getUserId());
-        dto.put("restaurantId", saved.getRestaurantId());
-        dto.put("status", saved.getStatus());
-        dto.put("total", saved.getTotal());
-        // Convert order items to DTOs
-        if (saved.getItems() != null) {
-            List<Map<String, Object>> items = saved.getItems().stream().map(item -> {
-                Map<String, Object> itemDto = new java.util.HashMap<>();
-                itemDto.put("id", item.getId());
-                itemDto.put("menuItemId", item.getMenuItemId());
-                itemDto.put("name", item.getName());
-                itemDto.put("price", item.getPrice());
-                itemDto.put("quantity", item.getQuantity());
-                return itemDto;
-            }).collect(java.util.stream.Collectors.toList());
-            dto.put("items", items);
-        } else {
-            dto.put("items", new java.util.ArrayList<>());
+        requireRestaurantOwner(user, order.getRestaurantId());
+        if (orderDetails.getStatus() != null) {
+            order.setStatus(validatedStatus(orderDetails.getStatus()));
         }
-        return dto;
+        return toOrderDto(orderRepository.save(order));
     }
 
     @DeleteMapping("/{id}")
     public void deleteOrder(@PathVariable Long id) {
-        orderRepository.deleteById(id);
+        throw new AccessDeniedException("Order deletion is only available through admin management");
     }
 
     @PutMapping("/{orderId}/status")
-    public Map<String, Object> updateOrderStatus(@PathVariable Long orderId, @RequestBody Map<String, Object> request, @AuthenticationPrincipal UserDetails userDetails) {
-        try {
-            if (userDetails == null) {
-                throw new RuntimeException("User not authenticated");
-            }
-            System.out.println("=== Order Status Update Debug ===");
-            System.out.println("Order ID: " + orderId);
-            System.out.println("User Details: " + userDetails.getUsername());
-            System.out.println("Request: " + request);
-            
-            Order order = orderRepository.findById(orderId).orElseThrow();
-            System.out.println("Found order: " + order.getId() + ", Restaurant ID: " + order.getRestaurantId());
-            
-            // Check if user is restaurant owner
-            User user = customerRepository.findByUsername(userDetails.getUsername()).orElseThrow();
-            System.out.println("Found user: " + user.getId() + ", Role: " + user.getRole());
-            
-            if (!"RESTAURANT".equals(user.getRole())) {
-                System.out.println("ERROR: User role is not RESTAURANT");
-                throw new RuntimeException("Only restaurant owners can update order status");
-            }
-            
-            // Find the restaurant owned by this user
-            var restaurantOpt = restaurantRepository.findAll().stream()
-                .filter(r -> r.getOwner() != null && r.getOwner().getId().equals(user.getId()))
-                .findFirst();
-            
-            if (restaurantOpt.isEmpty()) {
-                System.out.println("ERROR: No restaurant found for user ID: " + user.getId());
-                throw new RuntimeException("Restaurant not found for this user");
-            }
-            
-            var restaurant = restaurantOpt.get();
-            System.out.println("Found restaurant: " + restaurant.getId() + ", Order restaurant: " + order.getRestaurantId());
-            
-            // Verify restaurant owns this order
-            if (!order.getRestaurantId().equals(restaurant.getId())) {
-                System.out.println("ERROR: Restaurant ID mismatch. User's restaurant: " + restaurant.getId() + ", Order's restaurant: " + order.getRestaurantId());
-                throw new RuntimeException("You can only update orders for your restaurant");
-            }
-            
-            String newStatus = (String) request.get("status");
-            if (newStatus == null || newStatus.trim().isEmpty()) {
-                System.out.println("ERROR: Status is null or empty");
-                throw new RuntimeException("Status is required");
-            }
-            
-            System.out.println("Updating order status from '" + order.getStatus() + "' to '" + newStatus + "'");
-            order.setStatus(newStatus);
-            Order updatedOrder = orderRepository.save(order);
-            System.out.println("Order updated successfully");
-            
-            // Return the updated order in the same format as getOrderById
-            Map<String, Object> result = new java.util.HashMap<>();
-            result.put("id", updatedOrder.getId());
-            result.put("userId", updatedOrder.getUserId());
-            result.put("restaurantId", updatedOrder.getRestaurantId());
-            result.put("status", updatedOrder.getStatus());
-            result.put("total", updatedOrder.getTotal());
-            // Convert order items to DTOs
-            if (updatedOrder.getItems() != null) {
-                List<Map<String, Object>> items = updatedOrder.getItems().stream().map(item -> {
-                    Map<String, Object> itemDto = new java.util.HashMap<>();
-                    itemDto.put("id", item.getId());
-                    itemDto.put("menuItemId", item.getMenuItemId());
-                    itemDto.put("name", item.getName());
-                    itemDto.put("price", item.getPrice());
-                    itemDto.put("quantity", item.getQuantity());
-                    return itemDto;
-                }).collect(java.util.stream.Collectors.toList());
-                result.put("items", items);
-            } else {
-                result.put("items", new java.util.ArrayList<>());
-            }
-            result.put("date", updatedOrder.getCreatedAt() != null ? updatedOrder.getCreatedAt() : updatedOrder.getId());
-            result.put("createdAt", updatedOrder.getCreatedAt());
-            result.put("created_at", updatedOrder.getCreatedAt()); // Also include snake_case for compatibility
-            
-            // Add customer information
-            if (updatedOrder.getUserId() != null) {
-                var userOpt = customerRepository.findById(updatedOrder.getUserId());
-                if (userOpt.isPresent()) {
-                    User customer = userOpt.get();
-                    result.put("customerName", customer.getUsername());
-                    result.put("customerEmail", customer.getEmail());
-                }
-            }
-            
-            // Add restaurant name
-            String restaurantName = "";
-            if (updatedOrder.getRestaurantId() != null) {
-                var restOpt = restaurantRepository.findById(updatedOrder.getRestaurantId());
-                if (restOpt.isPresent()) restaurantName = restOpt.get().getName();
-            }
-            result.put("restaurantName", restaurantName);
-            
-            return result;
-        } catch (Exception e) {
-            System.out.println("ERROR in updateOrderStatus: " + e.getMessage());
-            e.printStackTrace();
-            throw e;
+    public Map<String, Object> updateOrderStatus(@PathVariable Long orderId, @RequestBody Map<String, Object> request,
+                                                 @AuthenticationPrincipal UserDetails userDetails) {
+        User user = authenticatedUser(userDetails);
+        Order order = orderRepository.findById(orderId).orElseThrow();
+        requireRestaurantOwner(user, order.getRestaurantId());
+
+        String newStatus = stringValue(request.get("status"));
+        if (newStatus == null || newStatus.isBlank()) {
+            throw new IllegalArgumentException("Status is required");
+        }
+        order.setStatus(validatedStatus(newStatus.trim()));
+        return toOrderDto(orderRepository.save(order));
+    }
+
+    private void requireOrderAccess(User user, Order order) {
+        if ("ADMIN".equals(user.getRole())) {
+            return;
+        }
+        if ("CUSTOMER".equals(user.getRole()) && order.getUserId().equals(user.getId())) {
+            return;
+        }
+        if (isRestaurantRole(user) && ownsRestaurant(user, order.getRestaurantId())) {
+            return;
+        }
+        throw new AccessDeniedException("Forbidden");
+    }
+
+    private void requireRestaurantOwner(User user, Long restaurantId) {
+        if (!isRestaurantRole(user) || !ownsRestaurant(user, restaurantId)) {
+            throw new AccessDeniedException("Forbidden");
         }
     }
-} 
+
+    private boolean ownsRestaurant(User user, Long restaurantId) {
+        return restaurantId != null
+            && restaurantRepository.findByOwner_Id(user.getId())
+                .map(Restaurant::getId)
+                .filter(restaurantId::equals)
+                .isPresent();
+    }
+
+    private boolean isRestaurantRole(User user) {
+        return "RESTAURANT".equals(user.getRole()) || "RESTAURANT_OWNER".equals(user.getRole());
+    }
+
+    private User authenticatedUser(UserDetails userDetails) {
+        if (userDetails == null) {
+            throw new ApiException("UNAUTHENTICATED", "Authentication required", HttpStatus.UNAUTHORIZED);
+        }
+        return customerRepository.findByUsername(userDetails.getUsername()).orElseThrow();
+    }
+
+    private String validatedStatus(String status) {
+        if (!ALLOWED_STATUSES.contains(status)) {
+            throw new IllegalArgumentException("Unsupported order status");
+        }
+        return status;
+    }
+
+    private Map<String, Object> toOrderDto(Order order) {
+        User customer = order.getUserId() != null ? customerRepository.findById(order.getUserId()).orElse(null) : null;
+        return toOrderDto(order, customer);
+    }
+
+    private Map<String, Object> toOrderDto(Order order, User customer) {
+        Map<String, Object> dto = new java.util.HashMap<>();
+        dto.put("id", order.getId());
+        dto.put("userId", order.getUserId());
+        dto.put("restaurantId", order.getRestaurantId());
+        dto.put("status", order.getStatus());
+        dto.put("total", order.getTotal());
+        dto.put("createdAt", order.getCreatedAt());
+        dto.put("created_at", order.getCreatedAt());
+        dto.put("date", order.getCreatedAt() != null ? order.getCreatedAt() : order.getId());
+        if (customer != null) {
+            dto.put("customerName", customer.getUsername());
+            dto.put("customerEmail", customer.getEmail());
+        }
+        if (order.getRestaurantId() != null) {
+            restaurantRepository.findById(order.getRestaurantId()).ifPresent(restaurant -> {
+                dto.put("restaurantName", restaurant.getName());
+                dto.put("restaurant", restaurant.getName());
+                dto.put("restaurantAddress", restaurant.getAddress());
+            });
+        }
+        List<Map<String, Object>> items = order.getItems() == null ? List.of() : order.getItems().stream().map(item -> {
+            Map<String, Object> itemDto = new java.util.HashMap<>();
+            itemDto.put("id", item.getId());
+            itemDto.put("menuItemId", item.getMenuItemId());
+            itemDto.put("name", item.getName());
+            itemDto.put("price", item.getPrice());
+            itemDto.put("quantity", item.getQuantity());
+            return itemDto;
+        }).toList();
+        dto.put("items", items);
+        return dto;
+    }
+
+    private Long requiredLong(Object value, String message) {
+        if (value == null) {
+            throw new IllegalArgumentException(message);
+        }
+        return Long.valueOf(value.toString());
+    }
+
+    private Integer requiredInteger(Object value, String message) {
+        if (value == null) {
+            throw new IllegalArgumentException(message);
+        }
+        return Integer.valueOf(value.toString());
+    }
+
+    private String stringValue(Object value) {
+        return value instanceof String string ? string : null;
+    }
+}
